--- a/Instructions/dotnet/Mod01/20532B_LAB_01.md
+++ b/Instructions/dotnet/Mod01/20532B_LAB_01.md
@@ -4,23 +4,23 @@
 
 ### Scenario
 
-The new Azure Portal is released and you are designated by your team as the individual who will explore the new portal and then train the other team members on how to use the portal. You decided to customize a few features of the new portal and create a new service instance.
+You have been designated by your team as the individual who will explore the Azure portal and then train the other team members on how to use the portal. You decided to customize a few features of the portal and create a new service instance.
 
 ### Objectives
 
 After you complete this lab, you will be able to:
 
-* Sign in to the Azure Portal.
+  * Sign in to the Azure Portal.
 
-* Customize your Startboard.
+  * Customize your Dashboard.
 
-* Identify a blade.
+  * Identify a blade.
 
-* Identify a journey.
+  * Identify a journey.
 
-* Identify a journey part.
+  * Identify a journey part.
 
-* Close a journey without persisting your changes.
+  * Close a journey without persisting your changes.
 
 ### Lab Setup
 
@@ -43,47 +43,56 @@ The main tasks for this exercise are as follows:
 
 1. Sign in to the Azure Portal (https://portal.azure.com).
 
-2. Click Get Started.
+2. If this is your first time logging in to the Azure portal, you will see a dialog with a tour of the portal. Click Get Started.
 
-> Results: After completing this exercise, you will have signed in to the Azure Portal directly without having to go through the Management Portal first.
+> Results: After completing this exercise, you will have signed in to the Azure Portal.
 
 ## Exercise 2: Customizing the Azure Portal
 
 ### Scenario
 
-You want to practice customizing the Startboard based on the needs of your team. You also want to walk through a journey
+You want to practice customizing the Dashboard based on the needs of your team. You also want to walk through a journey.
 
 The main tasks for this exercise are as follows:
 
-1. Customize the Startboard.
+  1. Customize the Dashboard.
 
-2. View a blade.
+  2. View a blade.
 
-3. Begin a journey.
+  3. Begin a journey.
 
-#### Task 1: Customize the Startboard
+#### Task 1: Customize the Dashboard
 
-1. View the **Customization** mode of the Startboard.
+1. View the **Customization** mode of the Dashboard.
 
-2. Resize the **Service Health** tile to the **Normal** size.
+2. Add a new **Service Health** tile using the **2x4** size.
 
-3. Close the Customization mode of the Startboard.
+4. Add a new **Markdown** tile using the following content:
+
+  ```
+  # Account Details
+  ## Corporate Account
+  Corporate Account ``345`` managed by the **IT** department.
+  > &copy;2016
+  ```
+
+3. Close the Customization mode of the Dashboard.
 
 #### Task 2: View a blade
 
-1. Open the **Browse** panel, and then click Portal settings.
+1. Open the **Browse** panel, and then click the **Subscriptions** option.
 
 2. View the **Portal Settings** blade.
 
 #### Task 3: Begin a journey
 
-1. Open the **New panel**, select a category and then click **Azure Marketplace**.
+1. Open the **New** panel, and then click **Marketplace**.
 
-2. In the **Marketplace** blade, select the **Web App** group, and then select the **Create** option for **Boilerplate** to begin a new journey.
+2. In the **Marketplace** blade, select the **Web + Mobile** group, and then create a new instance using the **ASP.NET Starter Web App** template.
 
-3. In the **Boilerplate** journey, view the journey part for creating a new **App Service Plan**.
+3. In the **ASP.NET Starter Web App** journey, view the journey part for creating a new **App Service Plan**.
 
-4. Close the **Boilerplate** blade to view the warning message that notifies you about losing the changes you made in the journey or a journey part.
+4. Close the **ASP.NET Starter Web App** blade to view the warning message that notifies you about losing the changes you made in the journey or a journey part.
 
 > **Results**: After completing this exercise, you will have viewed blades, journeys, and journey parts.
 
