--- a/Instructions/dotnet/Mod01/20532B_LAB_AK_01.md
+++ b/Instructions/dotnet/Mod01/20532B_LAB_AK_01.md
@@ -18,47 +18,66 @@
 
 6.	Click **Sign In**.
 
-7.	In the dialog box that displays, click **Get Started**.
+7.	If this is your first time logging in to the Azure portal, you will see a dialog with a tour of the portal. Click **Get Started**.
 
->**Results**: After completing this exercise, you will have signed in to the Azure Portal directly without having to go through the Management Portal first.
+>**Results**: After completing this exercise, you will have signed in to the Azure Portal.
 
 ### Exercise 2: Customizing the Azure Portal
 
-#### Task 1: Customize the Startboard
+#### Task 1: Customize the Dashboard
 
-1.	After the dashboard is fully loaded, right-click the **Startboard** (home screen), and then click **Customize**.
+1.	After the dashboard is fully loaded, right-click the **Dashboard** (home screen), and then click **Edit dashboard**.
 
-2.	Click the top Service health tile and click the gray button with three ellipses “…”.
+2.	In the **Tile Gallery**, drag the *Service Health* tile onto your dashboard.
 
-3.	Select the **Normal** option.
+3.  Click the gray button with three ellipses *“…”*.
 
-4.	Right-click the **Startboard** (home screen), and then click **Done customizing**.
+3.	Select the **2x4** size option.
+
+2.	In the **Tile Gallery**, drag the *Markdown* tile onto your dashboard.
+
+1.  In the **Content** section of the **Edit Markdown** dialog that appears, update the content with the following markup:
+
+  ```
+  # Account Details
+  ## Corporate Account
+  Corporate Account ``345`` managed by the **IT** department.
+  > &copy;2016
+  ```
+
+4.	Right-click the **Dashboard** (home screen), and then click **Done customizing**.
 
 #### Task 2: View a blade
 
 1.	On the left side of the screen, click **Browse**.
 
-2.	At the bottom of the **Browse** panel that displays, click **Portal settings**.
+2.	Within the list located in the **Browse** panel that displays, click **Subscriptions**.
 
-3.	Observe the **Portal settings** blade that displays.
+3.	Observe the **Subscriptions** blade that displays.
 
 #### Task 3: Begin a journey
 
 1.	At the top-left corner of the screen, click **New**.
 
-2.	In the **New** panel that displays, select any category and then click **Azure Marketplace**.
+2.	In the **New** panel that displays, click the **See all** link next to the **Marketplace** header.
 
-3.	In the **Marketplace** blade that displays, click **Web App**.
+3.	In the **Marketplace** blade that displays, click **Web + Mobile**.
 
-4.	In the **Web App** blade that displays, locate the **Starter Web App** group, and then click the **Boilerplate** option.
+4.	In the **Web + Mobile** blade that displays, locate the search box at the top of the blade, type in the text **starter** and then press *Enter*.
 
-5.	In the **Boilerplate** blade that displays, click **Create**.
+5. In the search **results**, locate and select the **ASP.NET Starter Web App** option.
 
-6.	In the next **Boilerplate** blade that displays, provide a name for your new **App Service Plan**.
+5.	In the **ASP.NET Starter Web App** blade that displays, click **Create**.
+
+6.	In the next **ASP.NET Starter Web App** blade that displays, click the **App Service plan/Location** option.
+
+7.  In the App Service Plan blade, click the **Create New** button.
+
+8.  Provide a name for your new **App Service Plan**.
 
   > If a textbox is not available, simply click the **create new** option in the **App Service Plan** dialog.
 
-7. Scroll to the left, and click the close (**X**) button on the first **Boilerplate** blade to close the journey.
+7. Scroll to the left, and click the close (**X**) button on the first **ASP.NET Starter Web App** blade to close the journey.
 
 8.	In the **Message from webpage** Internet Explorer dialog box, click **OK**.
 
