--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
@@ -81,6 +81,8 @@ The main tasks for this exercise are as follows:
 
   - Messaging Tier: **Standard**
 
+  > **Note:** It takes approximately 1-2 minutes to create your Service Bus namespace instance.
+
 1. Note down the connection string for your newly created Service Bus namespace.
 
 1. Create a new **queue** in your namespace by using the following details:
@@ -89,7 +91,7 @@ The main tasks for this exercise are as follows:
 
   - **Namespace**: sb20532[Your Name]
 
-> **Results:** After completing this exercise, you will have created a Service Bus namespace by using the Portal.
+> **Results:** After completing this exercise, you will have created a Service Bus namespace and queue by using the Portal.
 
 ## Exercise 2:	Using Azure Queue Storage for Document Generation
 
@@ -107,6 +109,8 @@ The main tasks for this exercise are as follows:
 
   1. Update administration application to add requests to the queue.
 
+  1. Create a Storage account instance.
+
   1. Generate the test data.
 
   1. Debug and verify the application.
@@ -119,6 +123,12 @@ The main tasks for this exercise are as follows:
 
 1. Open the **TableStorageQueueHelper.cs** file.
 
+1. Add a using statement for the **System.Configuration** namespace to the top of the file:
+
+  ```
+  using System.Configuration;
+  ```
+
 1. In the **TableStorageQueueHelper** constructor, get the queue client and the name of the queue by using the following code:
 
   ```
@@ -126,7 +136,7 @@ The main tasks for this exercise are as follows:
 
   _queueClient = storageAccount.CreateCloudQueueClient();
 
-  _signInQueueName = CloudConfigurationManager.GetSetting("SignInQueueName");
+  _signInQueueName = ConfigurationManager.AppSettings["SignInQueueName"];
   ```
 
 1. Remove the existing code from the **Receive** method.
@@ -163,7 +173,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Update administration application to add requests to the queue
 
-1.  Open the **SignInSheetViewModel.cs** file.
+1.  Open the **SignInSheetViewModel.cs** file located in the **Contoso.Events.ViewModels** project.
 
 1. In the **GenerateSignInSheetTableStorage** method, create a **CloudStorageAccount** instance and a **CloudQueueClient** instance with the **Microsoft.WindowsAzure.Storage.ConnectionString** setting value by using the following code:
 
@@ -189,25 +199,51 @@ The main tasks for this exercise are as follows:
   queue.AddMessage(queueMessage);
   ```
 
-#### Task 3: Generate the test data
+#### Task 3: Create a Storage Account Instance
 
-1.  Start the **Windows Azure Storage Emulator – v4.2**.
+1. Sign in to the Azure Portal (https://portal.azure.com).
 
-1. Debug the **Contoso.Events.Data.Generation** project to generate the SQL and Storage tables data.
+2. Create a Storage Account using the following details:
 
-#### Task 4: Debug and verify the application
+  - Name: **provide a globally unique value**
 
-1.  Configure the solution for multiple startup projects with the following options:
+  - Replication: **Locally Redundant Storage (LRS)**
 
-  - **Contoso.Events.Web**: Start
+  - Resource Group: **20532**
 
-  - **Contoso.Events.Management**: Start without debugging
+  - Location: **Select the region that is closest to your location**
 
-1. Debug the solution.
+3. Record the *account name* for your newly created Storage Account instance.
 
-  > **Note:** You would have configured the solution to debug the **Contoso.Events.Web** project and to simply run the **Contoso.Events.Management** project. This will ensure that both web applications are running and won’t cause a conflict with the debugger.** **
+4. Select an access key and record the *connection string* for that key.
 
-1. Open **Contoso Events (Contoso.Events.Web)** website, and then open the **Contoso.Events.Administration** website by using IIS Express.
+#### Task 4: Generate the test data
+
+1. Locate the **Contoso.Events.Data.Generation** project.
+
+1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the **StorageConnectionString** *AppSetting*.
+
+1. Debug the **Contoso.Events.Data.Generation** project to generate the SQL and storage tables data.
+
+#### Task: Debug and verify the application
+
+1. Update your solution configuration to start the **Contoso.Events.Web**, **Contoso.Events.Worker** and **Contoso.Events.Management** projects when the solution is debugged.
+
+1. Update the **web.config** file in the **Contoso.Events.Web** project to use your *Storage Account*'s connection string in the **Microsoft.WindowsAzure.Storage.ConnectionString** *AppSetting*.
+
+1. Update the **web.config** file in the **Contoso.Events.Management** project to use your *Storage Account*'s connection string in the **Microsoft.WindowsAzure.Storage.ConnectionString** *AppSetting*.
+
+1. Update the **app.config** file in the **Contoso.Events.Worker** project to use your *Storage Account*'s connection string in the following locations:
+
+    - **StorageConnectionString** *AppSetting*
+
+    - **AzureWebJobsStorage** *ConnectionString*
+
+    - **AzureWebJobsDashboard** *ConnectionString*
+
+1. Debug the **Contoso.Events.Web**, **Contoso.Events.Worker** and **Contoso.Events.Management** projects.
+
+1. In the **Contoso Events Administration** web application,
 
 1. Switch to the **Contoso.Events – Microsoft Visual Studio** window.
 
@@ -219,7 +255,7 @@ The main tasks for this exercise are as follows:
   HandleMessage(message);
   ```
 
-1. Switch to the **Home - Contoso.Events.Administration** window.
+1. Switch to the **Home - Contoso.Events.Administration** browser window.
 
 1. In the **Contoso Events Administration** web application, select any event, generate a sign-in sheet, and then download the sign-in sheet.
 
@@ -344,10 +380,6 @@ The main tasks for this exercise are as follows:
 
 1. Debug the solution.
 
-1. Open **Contoso Events (Contoso.Events.Web)** website, and then open the **Contoso.Events.Administration** website by using IIS Express.
-
-1. Switch to the **Home - Contoso.Events.Administration** window.
-
 1. In the **Contoso Events Administration** web application, select any event, generate a sign-in sheet, and then download the sign-in sheet.
 
 1. Verify that the application pauses execution at the debug breakpoint.
@@ -465,7 +497,7 @@ The main tasks for this exercise are as follows:
 
 1. Update the **NetTcpBinding** with its relay equivalent **(NetTcpRelayBinding)**.
 
-1. After the creation of the **ChannelFactory&lt;ILodgingService&gt;** instance, create an endpoint behavior with the Shared Secret Token provider by using the following code:
+1. After the creation of the **ChannelFactory<ILodgingService>** instance, create an endpoint behavior with the Shared Secret Token provider by using the following code:
 
   ```
   TransportClientEndpointBehavior endpointBehavior = new TransportClientEndpointBehavior();
@@ -500,27 +532,15 @@ The main tasks for this exercise are as follows:
 
 #### Task 5: Debug the cloud web application
 
-1. Configure Visual Studio 2015 to use multiple startup projects with the following configuration:
+1. Update your solution configuration to start both the **Contoso.Events.Web** and **Contoso.Events.Lodging** projects when the solution is debugged.
 
-  - Contoso.Events.Web: **Start without debugging**
+1. Locate the **Contoso.Events.Data.Generation** project.
 
-  - Consoto.Events.Lodging: **Start without debugging**
+1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the **StorageConnectionString** *AppSetting*.
 
-  - Contoso.Events.Management: **None**
+1. Debug the **Contoso.Events.Data.Generation** project to generate the SQL and storage tables data.
 
-1. Open the **Windows Azure Storage Emulator – v4.2**
-
-1. Debug the **Contoso.Events.Data.Generation** project to generate the SQL and Azure Storage tables data.
-
-1. Close Microsoft Visual Studio 2015.
-
-1. Re-launch Microsoft Visual Studio 2015 as an administrator.
-
-1. Open the **Contoso.Events** solution:
-
-  - File location: **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Relay\\Contoso.Events**
-
-1. Start the **Contoso.Events** solution.
+1. Debug the **Contoso.Events.Web** and **Contoso.Events.Lodging** projects.
 
 > **Results:** After completing this exercise, you will have connected existing WCF applications to clients by using Service Bus relay.
 
