--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -16,21 +16,25 @@
 
 1. In the password box, type the password for your Microsoft account.
 
-1. Click **Sign In** In the navigation pane on the left side, scroll down, and then click **Service Bus**.
+1. Click **Sign In** In the navigation pane on the left side
 
-1. At the bottom of the screen, click **Create**.
+1. In the navigation pane on the left side of the screen, scroll down, and then click **Service Bus**.
+
+1. At the bottom of the screen, click the **Create** button.
 
 1. In the **Create a Namespace** dialog box, perform the following steps:
 
-  a. In the **Namespace** **Name** box, type **sb20532[*Your Name*]**.
+  a. In the **Namespace Name** box, type **sb20532[*Your Name*]**.
 
-  a. In the **Region** list, select the region that is closest to your location.
+  b. In the **Region** list, select the region that is closest to your location.
 
-  a. In the **Type** list, select the **Messaging** option.
+  c. In the **Type** list, select the **Messaging** option.
 
-  a. In the **Messaging Tier** list, select the **Standard** option.
+  d. In the **Messaging Tier** list, select the **Standard** option.
 
-  a. Click the check mark button to create your namespace.
+  e. Click the check mark button to create your namespace.
+
+  > **Note:** It takes approximately 1-2 minutes to create your Service Bus namespace instance.
 
 1. In the list of **Service Bus** namespaces, click the namespace that you just created.
 
@@ -38,7 +42,7 @@
 
 1. Record the *RootManageSharedAccessKey* connection string from the **Access connection information** dialog box.
 
-  > **Note:** You have to record a connection string from the list of SAS items.
+  > **Note:** You must record a connection string from the list of SAS items.
 
 1. Close the **Access connection information** dialog box.
 
@@ -46,7 +50,7 @@
 
 1. At the bottom-left corner of the screen, click **New**.
 
-1. If it is not automatically selected, select **App Services =&gt; Service Bus =&gt; Queue =&gt; Custom Create**.
+1. If it is not automatically selected, select **App Services > Service Bus > Queue > Custom Create**.
 
 1. In the **Create a Queue** dialog box, perform the following steps:
 
@@ -62,7 +66,7 @@
 
   a. Click the check mark button to create the new queue.
 
-> **Results:** After completing this exercise, you will have created a Service Bus namespace by using the Portal.
+> **Results:** After completing this exercise, you will have created a Service Bus namespace and queue by using the Portal.
 
 ## Exercise 2: Using Azure Queue Storage for Document Generation
 
@@ -80,6 +84,12 @@
 
 1. Double-click the **TableStorageQueueHelper.cs** file.
 
+1. Add a using statement for the **System.Configuration** namespace to the top of the file:
+
+  ```
+  using System.Configuration;
+  ```
+
 1. At the end of the **TableStorageQueueHelper** constructor and before the closing parenthesis, store the **StorageAccount** property from the base class in a *CloudStorageAccount* variable:
 
   ```
@@ -92,16 +102,16 @@
   _queueClient = storageAccount.CreateCloudQueueClient();
   ```
 
-1. Invoke the static **CloudConfigurationManager.GetSetting** method and assign the result to the *_signInQueueName* variable:
+1. Invoke the static **ConfigurationManager.AppSettings** property and assign the result to the *_signInQueueName* variable:
 
   ```
-  _signInQueueName = CloudConfigurationManager.GetSetting("SignInQueueName");
+  _signInQueueName = ConfigurationManager.AppSettings["SignInQueueName"];
   ```
 
 1. In the **TableStorageQueueHelper** class, find the method with the following signature:
 
   ```
-  IQueueMessage&lt;CloudQueueMessage&gt; Receive()
+  IQueueMessage<CloudQueueMessage> Receive()
   ```
 
 1. Remove the single line of code in the class:
@@ -154,7 +164,7 @@
 
 #### Task 2: Update administration application to add requests to the queue
 
-1.  In the **Solution Explorer** pane, expand the **Shared** folder.
+1. In the **Solution Explorer** pane, expand the **Shared** folder.
 
 1. In the **Solution Explorer** pane, expand the **Contoso.Events.ViewModels** project.
 
@@ -196,43 +206,165 @@
   queue.AddMessage(queueMessage);
   ```
 
-#### Task 3: Generate the test data
+#### Task 3: Create a Storage Account Instance
 
-1.  On the Start screen, type **Azure Storage Emulator**.
+1. On the Start screen, click the **Internet Explorer** tile.
 
-1. Click the **Windows Azure Storage Emulator – v4.2** tile.
+2. Go to https://portal.azure.com
 
-1. Switch to the **Contoso.Events – Microsoft Visual Studio** window.
+3. Enter the email address of your Microsoft account. Click **Continue**.
 
-1. In the **Solution Explorer** pane, right-click **Contoso.Events.Data.Generation project**, point to **Debug,** and then click **Start New Instance**.
+4. Enter the password for your Microsoft account.
 
-#### Task 4: Debug and verify the application
+5. Click **Sign In**.
 
-1.  In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
+1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **More Services**.
 
-1. In the **Solution 'Contoso.Events' Property Pages** dialog box, perform the following steps:
+2. In the **Browse** blade that displays, click **Storage accounts**.
 
-  a. In the navigation menu on the left side of the dialog box, ensure that **CommonProperties** =&gt; **Startup Project** is selected.
+3. In the **Storage accounts** blade that displays, view your list of storage account instances.
 
-  a. Select **Multiple startup projects**.
+4. At the top of the **Storage accounts** blade, click the **Add** button.
 
-  a. For **Contoso.Events.Web**, set the **Action** to **Start**.
+5. In the **Create storage account** blade that displays, perform the following steps:
 
-  a. For **Contoso.Events.Management**, set the **Action** to **Start without debugging**.
+    a. In the **Name** box, provide a globally unique value.
 
-  a. Ensure that all of the remaining projects have their **Action** set to **None**.
+    b. In the **Deployment model** section, ensure that the *Resource manager* option is selected.
 
-  a. Click **OK**.
+    c. In the **Account kind** list, ensure that the *General purpose* option is selected.
 
-1. On the **Debug** menu, click **Start Debugging**.
+    d. In the **Performance** section, ensure that the *Standard* option is selected.
 
-1. In the **notification area**, click the arrow to view the running applications.
+    e. Click on the **Replication** list and select the **Locally Redundant (LRS)** option.
 
-1. Locate and right-click the *IIS Express* icon.
+    f. In the **Location** list, select the region closest to your current location.
 
-1. Point to the **Contoso.Events.Management** option under the **View Sites** header, and then click the URL under the **Browse Applications** header.
+    g. In the **Resource group** section, select the **Use existing** option.
 
-1. Point to the **Contoso.Events.Web** option under the **View Sites** header, and then click the URL under **Browse Applications**.
+    h. In the **Resource group** section, locate the dialog box and provide the value **20532**.
+
+    i. Ensure that the **Pin to dashboard** option is selected.
+
+    j. Click **Create**.
+
+6. Once the **Storage account** instance is created, the blade for the new instance will open automatically.
+
+7. In the **Storage account** blade, record the name of your *storage account*.
+
+8. Click the **Settings** button at the top of the blade.
+
+8. In the **Settings** blade, select the **Access keys** option.
+
+9. In the **Access keys** blade, locate a key that you wish to use.
+
+    > **Note:** you can use any of the keys listed for this lab.
+
+10. For the access key you selected, click the three ellipsis (...) button to the right of the key. Once clicked, select the **View connection string** option.
+
+10. In the **View connection string** dialog, record your connection string for the access key you selected.
+
+    > **Note:** This connection string will be used in various parts of this lab.
+
+11. Close the **View connection string** dialog.
+
+#### Task 4: Generate the test data
+
+1. In the **Solution Explorer** pane, expand the **Shared** solution folder.
+
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Data.Generation** project.
+
+3. Locate and open the **app.config** file in the project.
+
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+3. In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
+
+4. Wait for debugging to complete (when the console window closes).
+
+#### Task 5: Debug and verify the application
+
+1. In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
+
+1. Navigate to the **Startup Project** section located under the **Common Properties** header.
+
+1. In the **Startup Project** section, locate and select the **Multiple startup projects** option.
+
+1. Within the **Multiple startup projects** table, perform the following actions:
+
+    a. Locate the **Contoso.Events.Web** entry and change it's *Action* from **None** to **Start**.
+
+    b. Locate the **Contoso.Events.Management** entry and change it's *Action* from **None** to **Start**.
+
+    c. Locate the **Contoso.Events.Worker** entry and change it's *Action* from **None** to **Start**.
+
+    d. Ensure that all the remaining projects have their **Action** set to **None**.
+
+1. Click the **OK** button to close the *Property* dialog.
+
+1. In the **Solution Explorer** pane, expand the **Administration** solution folder.
+
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Management** project.
+
+3. Locate and open the **web.config** file in the project.
+
+4. Within the **web.config** file, locate the following configuration setting:
+
+    ```
+    <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+1. In the **Solution Explorer** pane, expand the **Roles** solution folder.
+
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
+
+3. Locate and open the **web.config** file in the project.
+
+4. Within the **web.config** file, locate the following configuration setting:
+
+    ```
+    <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+2.  In the **Solution Explorer** pane, expand the **Contoso.Events.Worker** project.
+
+3. Locate and open the **app.config** file in the project.
+
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add name="AzureWebJobsStorage" connectionString="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **connectionString** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add name="AzureWebJobsDashboard" connectionString="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **connectionString** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+2. On the **Debug** menu, click **Start Debugging**.
 
 1. On the desktop, click the **Contoso.Events – Microsoft Visual Studio** window.
 
@@ -254,7 +386,7 @@
 
 1. Right-click the target line of code, point to **Breakpoint**, and click **Insert Breakpoint**.
 
-1. On the desktop, click the **Home - Contoso.Events.Administration** window.
+1. On the desktop, click the **Home - Contoso.Events.Administration** browser window.
 
 1. On the home page of the **Contoso Events Administration** web application, click the **Events** button to go to the list of events.
 
@@ -315,7 +447,7 @@
 1. In the **ServiceBusQueueHelper** class, find the method with the following signature:
 
   ```
-  IQueueMessage&lt;BrokeredMessage&gt; Receive()
+  IQueueMessage<BrokeredMessage> Receive()
   ```
 
 1. Remove the single line of code in the class:
@@ -418,14 +550,6 @@
 
 1. On the **Debug** menu, click **Start Debugging**.
 
-1. In the notification area, click the arrow to view the running application.
-
-1. Locate the **IIS Express** icon, and then right-click the icon.
-
-1. Point to the **Contoso.Events.Management** option under the **View Sites** header, and then click the URL under **Browse Applications**.
-
-1. Point to the **Contoso.Events.Web** option under the **View Sites** header, and then click the URL under **Browse Applications**.
-
 1. On the home page for the **Contoso Events Administration** web application, click the **Events** button to view the list of events.
 
 1. Click the **Sign-In Sheet** button for any event in the list.
@@ -522,25 +646,25 @@
 
 1. Locate the first **behavior** child XML element with a **name** value of **ServiceBusRelayBehavior**, as shown in the following code:
 
-&lt;behavior name="ServiceBusRelayBehavior"&gt;
+<behavior name="ServiceBusRelayBehavior">
 
-&lt;/behavior&gt;
+</behavior>
 
 1. Within the tags of the **behavior** element, add a **transportClientEndpointBehavior** element, as shown in the following code:
 
-&lt;transportClientEndpointBehavior&gt;
+<transportClientEndpointBehavior>
 
-&lt;/transportClientEndpointBehavior&gt;
+</transportClientEndpointBehavior>
 
 1. Within the tags of the **transportClientEndpointBehavior** element, add a **tokenProvider** element, as shown in the following code:
 
-&lt;tokenProvider&gt;
+<tokenProvider>
 
-&lt;/tokenProvider&gt;
+</tokenProvider>
 
 1. Within the tags of the **tokenProvider** element, add a **sharedAccessSignature** element.
 
-&lt;sharedAccessSignature keyName="[keyName]" key="[key]" /&gt;
+<sharedAccessSignature keyName="[keyName]" key="[key]" />
 
 1. Within the **sharedAccessSignature** element,
 
@@ -572,7 +696,7 @@
 
 1. Locate the method with the following signature:
 
-1. private static IEnumerable&lt;Hotel&gt; GetHotels()
+1. private static IEnumerable<Hotel> GetHotels()
 
 1. Remove the line that creates a Uri by using a static string, as shown in the following code:
 
@@ -596,7 +720,7 @@
 
 1. new NetTcpRelayBinding(),
 
-1. On the next line after the **ChannelFactory&lt;ILodgingService**&gt; instance is created, create an instance of the **TransportClientEndpointBehavior** class:
+1. On the next line after the **ChannelFactory<ILodgingService**> instance is created, create an instance of the **TransportClientEndpointBehavior** class:
 
 	```
 	TransportClientEndpointBehavior endpointBehavior = new TransportClientEndpointBehavior();
@@ -632,7 +756,7 @@
 
 1. Locate the method with the following signature.
 
-1. private static IEnumerable&lt;Hotel&gt; GetHotels()
+1. private static IEnumerable<Hotel> GetHotels()
 
 1. Select the method signature and body.
 
@@ -650,7 +774,7 @@
 
 1. Locate the method with the following signature:
 
-1. private static IEnumerable&lt;Hotel&gt; GetHotels()
+1. private static IEnumerable<Hotel> GetHotels()
 
 1. Select the entire method signature and body.
 
@@ -660,47 +784,39 @@
 
 1.  In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
 
-1. In the **Solution ‘Contoso.Events’ Property Pages** dialog box, perform the following steps:
+In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
 
-  a. Make sure that **CommonProperties =&gt; Startup Project** is selected in the navigation menu on the left side.
+1. Navigate to the **Startup Project** section located under the **Common Properties** header.
 
-  a. Select **Multiple startup projects**.
+1. In the **Startup Project** section, locate and select the **Multiple startup projects** option.
 
-  a. For **Contoso.Events.Web**, set the **Action** to **Start without debugging**.
+1. Within the **Multiple startup projects** table, perform the following actions:
 
-  a. For **Contoso.Events.Lodging**, set the **Action** to **Start without debugging**.
+    a. Locate the **Contoso.Events.Web** entry and change it's *Action* from **None** to **Start**.
 
-  a. For **Contoso.Events.Management**, set the **Action** to **None**.
+    b. Locate the **Contoso.Events.Lodging** entry and change it's *Action* from **None** to **Start**.
 
-  a. Ensure that all the remaining projects have their **Action** set to **None**.
+    d. Ensure that all the remaining projects have their **Action** set to **None**.
 
-  a. Click **OK**.
+1. Click the **OK** button to close the *Property* dialog.
 
-1. On the Start screen, type **Azure Storage Emulator**.
+1. In the **Solution Explorer** pane, expand the **Shared** solution folder.
 
-1. Click the **Windows Azure Storage Emulator – v4.2** tile.
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Data.Generation** project.
 
-1. Switch to the **Contoso.Events – Microsoft Visual Studio** window.
+3. Locate and open the **app.config** file in the project.
 
-1. In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation project**, point to **Debug**, and then click **Start New Instance**.
+4. Within the **app.config** file, locate the following configuration setting:
 
-1. Wait for the debug process to complete and for the console window to close.
+    ```
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    ```
 
-1. Close the **Contoso.Events – Microsoft Visual Studio** application.
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
 
-1. On the Start screen, locate and click the **Visual Studio 2015** tile.
+3. In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
 
-  > **Note:** You might have to use the down arrow to locate the Visual Studio 2015 tile on your Start screen.
-
-1. On the **File** menu, point to **Open**, and then click **Project/Solution**.
-
-1. In the **Open Project** dialog box, perform the following steps:
-
-  a. Go to **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Relay\\Contoso.Events**.
-
-  a. Click the **Contoso.Events** Microsoft Visual Studio Solution file.
-
-  a. Click **Open**.
+4. Wait for debugging to complete (when the console window closes).
 
 1. On the **Debug** menu, click **Start without Debugging**.
 
@@ -721,8 +837,6 @@
 1. Close the **Internet Explorer** application.
 
 1. Close the **Microsoft Visual Studio** applications.
-
-1. Close the **Windows Azure Storage Emulator** command prompt.
 
 > **Results:** After completing this exercise, you will have connected existing WCF applications to clients by using Service Bus relay.
 
